--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>omar khalif
+        <h1 class='masthead-heading'>omar Khalif
           
 
         </h1>
