--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>omar Khalif
+        <h1 class='masthead-heading'>omar A Khalif
           
 
         </h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Nairobi,Kenya...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>any outdoor activity ...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>working for my own company...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bloomington,MN...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>i always wanted to be a web designer or developer ...</p>
     </section>
 
     <footer id="footer">
