updating our details

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>...</p>
+      <p>HI, I am omar A. am a student in Normandale community college. in College i am doing Computer science and i always wanted to be creative. so here i am in UofM bootcamp doing what i am pationate about ...</p>
       <h1>Where I'm From</h1>
       <p>Nairobi,Kenya...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>any outdoor activity ...</p>
+      <p>i like any outdoor activity, but lately i have been wanting to hike because i want to visit yellow Stone National Park...</p>
       <h1>What's your dream job?</h1>
-      <p>working for my own company...</p>
+      <p>working in a startup company as a front end developer...</p>
       <h1>Where do you live?</h1>
       <p>Bloomington,MN...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>i always wanted to be a web designer or developer ...</p>
+      <p>i want to start my own startup company or work in a startup company to flex my creativity muscles ...</p>
     </section>
 
     <footer id="footer">
