--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>HI, I am omar A. am a student in Normandale community college. in College i am doing Computer science and i always wanted to be creative. so here i am in UofM bootcamp doing what i am pationate about ...</p>
+      <p>HI, I am Omar and i am a software developer ...</p>
       <h1>Where I'm From</h1>
       <p>Nairobi,Kenya...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>i like any outdoor activity, but lately i have been wanting to hike because i want to visit yellow Stone National Park...</p>
+      <p>i like sleeping and doing research on things ...</p>
       <h1>What's your dream job?</h1>
       <p>working in a startup company as a front end developer...</p>
       <h1>Where do you live?</h1>
