--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-    <meta charset="utf-8">
+    <title>Hello World!</title>
+  </head>
 
-    <title>About Me</title>
-    <link rel="stylesheet" href="css/style.css">
+  <body>
+    <h1>Panda Fan Site!</h1>
 
-</head>
+    <p>
+      I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE PANDAS!!! I LOVE
+      PANDAS!!!
+    </p>
 
-<body>
-    <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>omar A Khalif
-          
+    <h2>Reasons I like Pandas</h2>
 
-        </h1>
-    </header>
-    <section class="details">
-      <h1>Introduction</h1>
-      <p>HI, I am Omar and i am a software developer ...</p>
-      <h1>Where I'm From</h1>
-      <p>Nairobi,Kenya...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>i like sleeping and doing research on things ...</p>
-      <h1>What's your dream job?</h1>
-      <p>working in a startup company as a front end developer...</p>
-      <h1>Where do you live?</h1>
-      <p>Bloomington,MN...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>i want to start my own startup company or work in a startup company to flex my creativity muscles ...</p>
-    </section>
+    <ul>
+      <li>They are  fuzzy</li>
 
-    <footer id="footer">
-        <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
-        </ul>
-    </footer>
-</body>
+      <li>They are cute</li>
+      <li></li>
 
+      <li>They are adorable</li>
+      <li></li>
+    </ul>
+
+    <img
+      src="http://images4.fanpop.com/image/photos/17800000/Cute-Panda-Cubs-Together-pandas-17838800-450-324.jpg"
+      alt="Cute Pandas"
+    />
+
+    <br />
+
+    <a href="http://www.pandafix.com/">PandaFix.com</a>
+  </body>
 </html>
