--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>omar A Khalif
+        <h1 class='masthead-heading'>omar Khalif
 
 
         </h1>
@@ -22,13 +22,13 @@
       <h1>Where I'm From</h1>
       <p>Nairobi,Kenya...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>i like sleeping and doing research on things ...</p>
+      <p>i like soccer, its a great outdoor game practiced by approximately 250 million ...</p>
       <h1>What's your dream job?</h1>
-      <p>working in a startup company as a front end developer...</p>
+      <p>My dream job is working with microsoft to come up with newer versions of microsoft...</p>
       <h1>Where do you live?</h1>
       <p>Bloomington,MN...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>i want to start my own startup company or work in a startup company to flex my creativity muscles ...</p>
+      <p>i want to be part of the growing industry of technology ...</p>
     </section>
 
     <footer id="footer">
